# robotics

./: .gitignore
001_Module01/ex01/: commands.txt
002_Module02/ex01/: .bashrc
002_Module02/ex03/andrey/: CMakeLists.txt  package.xml
002_Module02/ex03/andrey/src/: node.cpp
002_Module02/ex04/: colcon_build.txt
002_Module02/ex05/: rosnode_info.txt  rosnode_list.txt
002_Module02/ex06/: cmd_vel.txt
002_Module02/ex08/: rqt_console.csv  three_turtles_launch.yaml
002_Module02/ex09/tutorial_interfaces/: CMakeLists.txt  package.xml
002_Module02/ex09/tutorial_interfaces/msg/: FullNameMessage.msg
002_Module02/ex10/text_to_cmd_vel/: CMakeLists.txt  package.xml
002_Module02/ex10/text_to_cmd_vel/src/: text_to_cmd_vel.cpp
002_Module02/ex2/: package_path_ros2topic.txt
003_Module03/ex01/names_interface/: CMakeLists.txt  package.xml
003_Module03/ex01/names_interface/srv/: SummFullName.srv
003_Module03/ex01/service_full_name/: CMakeLists.txt  package.xml
003_Module03/ex01/service_full_name/src/: client.cpp  concat_full_name.cpp
003_Module03/ex02/action_turtle_commands/: CMakeLists.txt  package.xml
003_Module03/ex02/action_turtle_commands/src/: action_turtle_client.cpp  action_turtle_server.cpp
003_Module03/ex02/message_turtle_commands/: CMakeLists.txt  package.xml
003_Module03/ex02/message_turtle_commands/action/: MessageTurtleCommands.action
003_Module03/ex03/pose_speed_x1/: metadata.yaml  pose_speed_x1_0.db3
003_Module03/ex03/pose_speed_x2/: metadata.yaml  pose_speed_x2_0.db3
003_Module03/ex03/turtle_cmd_vel/: metadata.yaml  turtle_cmd_vel_0.db3
003_Module03/ex04/: doctor.txt
